[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator for the A-Maze-ing project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "mazegen"}

[tool.setuptools.packages.find]
where = ["mazegen"]